# AudioVideoRecorder

./: .gitignore  CMakeLists.txt  Main.qml  Main.qml.autosave  audioo.cpp  audioo.h  audiorecorder.cpp  audiorecorder.h  folders.cpp  folders.h  main.cpp
Storage/: Rec_Audio_1.m4a  Rec_Video_1.m4a  mic.mp3.m4a  videon4.m4a
